styled search bar in nav FInished styling for search bar in nav. And moved nav_close to the top so the search bar and the nav_clos are aligned correct

--- a/eriasoverflow/static/eriasoverflow/css/styles.css
+++ b/eriasoverflow/static/eriasoverflow/css/styles.css
@@ -219,7 +219,7 @@ img{
 .nav_close{
     position: absolute;
     right: 1.3rem;
-    bottom: .5rem;
+    bottom: .85rem;
     font-size: 1.5rem;
     cursor: pointer;
     color: var(--first-color);
@@ -243,8 +243,9 @@ img{
 /* SEARCH FORM */
 .search{
     width: 80%;
+    left: 10%;
+    padding-right: 1rem;
     padding-top: 1rem;
-    padding-left: 3.75rem;
     position: absolute;
 }
 
